--- a/estilos.css
+++ b/estilos.css
@@ -21,8 +21,12 @@ font-family: 'Playpen Sans', cursive; */
     background-color: #3d3d3d60;
 }
 .nav-item{
-    font-size: 25px;
     text-align: right;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: cursive;
+    position: right;
 }
 .titulo{
     font-size: 30px;
@@ -90,11 +94,19 @@ footer a{
     font-size: 30px;
     box-shadow: 0 0 5px white;
   }
-.mapa{
+/* .mapa{
     position: static right;
     right: 100%;
     bottom: 40px;
     text-align: right;
     margin-left: 700px;
 
+} */
+.cc{
+    text-align: center;
+    background-color: white;
+}
+.redes{
+    text-align: center;
+    color: rgba(233, 233, 8, 0.781);
 }
