--- a/estilos.css
+++ b/estilos.css
@@ -29,9 +29,10 @@ font-family: 'Playpen Sans', cursive; */
     position: right;
 }
 .titulo{
-    font-size: 30px;
+    font-size: 25px;
     color: white;
     text-decoration: none;
+    font-family: cursive;
 }
 html{
     scroll-behavior: smooth;
@@ -47,9 +48,15 @@ html{
 .call a:hover{
     background-color: #333;
   }
-.call p{
+.pp{
     margin-bottom: 20px;
-  }
+    
+}
+.texto{
+    margin-bottom: 20px;
+    /* font-family:  font-family: 'Comic Neue', cursive; */
+    font-family: 'Playpen Sans', cursive;
+}
 .boton{
     background-color: rgba(233, 233, 8, 0.781);
     color: white;
@@ -109,4 +116,124 @@ footer a{
 .redes{
     text-align: center;
     color: rgba(233, 233, 8, 0.781);
+}
+.nav-link{
+    text-decoration: none;
+    font-family: cursive;
+    padding: 20px;
+}
+.contenedor{
+    height: 700px;
+    width: 100%;
+    background-color: #6b69696e;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 300px);
+    grid-template-areas: 
+    "img1 img2 img3 img3"
+    "img1 img4 img5 img6"
+    "img7 img4 img8 img8";
+    padding: 30px;
+    grid-gap: 15px;
+}
+.item{
+    border: 3px solid white;
+    border-radius: 10px;
+    background-size: cover;
+    background-position: center;
+    padding: 10px;
+
+}
+.item:hover{
+    filter: grayscale(75%);
+    transform: scale(1.1);
+    transition: all 0.9s;
+}
+.item1{
+    grid-area: img1;
+    background-image: url(multime/buzonegro.jpeg);
+    
+}
+.item2{
+    grid-area: img2;
+    background-image: url(multime/buzovioleta.jpeg);
+}
+.item3{
+    grid-area: img3;
+    background-image: url(multime/taza\ homero1.jpeg);
+}
+.item4{
+    grid-area: img4;
+    background-image: url(multime/rememessi.jpeg);
+}
+.item5{
+    grid-area: img5;
+    background-image: url(multime/campera.jpeg);
+}
+.item6{
+    grid-area: img6;
+    background-image: url(multime/buzovioleta.jpeg);
+}
+.item7{
+    grid-area: img7;
+    background-image: url(multime/tazabob.jpeg);
+}
+.item8{
+    grid-area: img8;
+    background-image: url(multime/taza\ perrito.jpeg);
+    
+}
+p{
+    text-align: center;
+    font-size: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* background-color: aliceblue; */
+    /* background-position: bottom; */
+    /* border: 3px solid #333; */
+}
+
+@media only screen and (min-width:300px) and (max-width:1024px){
+    .contenedor{
+        grid-template-columns: 1fr 1fr 1fr !important;
+        
+    }
+
+    .item1{
+        grid-column:1/3 ;
+        grid-row:1/2;
+    }
+    .item2{
+        grid-column: 3/4;
+        grid-row: 1/2;
+    }
+    .item3{
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .item4{
+        grid-column: 2/4;
+        grid-row: 2/3;
+    }
+    .item5{
+        grid-column: 1/3;
+        grid-row: 3/4;
+    }
+    .item6{
+        grid-column: 3/4;
+        grid-row: 3/4;
+    }
+    .item7{
+        grid-column: 1/2;
+        grid-row: 4/5;
+    }
+    .item8{
+        grid-column: 2/4;
+        grid-row: 4/5;
+    }
+}
+@media only screen and (min-width: 1024px){
+    .contenedor{
+        grid-template-columns:repeat( 4, 1fr) ;
+        grid-template-rows: 200px 200px;
+    }
 }
