--- a/estilos.scss
+++ b/estilos.scss
@@ -173,7 +173,7 @@ footer {
 }
 
 .contenedor {
-  height: 700px;
+  // height: 700px;
   width: 100%;
   background-color:$color1;
   display: grid;
